--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.todos.TodoListActivity"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TodoListActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.example.todos.TodoActivity"
-            android:parentActivityName="com.example.todos.TodoListActivity"></activity>
-        <activity android:name="com.example.todos.CategoryActivity"
-            android:parentActivityName="com.example.todos.TodoListActivity"></activity>
+            android:name=".TodoActivity"
+            android:parentActivityName=".TodoListActivity" />
+        <activity
+            android:name=".CategoryActivity"
+            android:parentActivityName=".TodoListActivity" />
+
         <provider
             android:name=".data.TodosProvider"
             android:authorities="com.example.todos.todosprovider"
             android:exported="false" />
+
     </application>
 
 </manifest>
