--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TodoListActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TodoListActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".TodoActivity"
             android:parentActivityName=".TodoListActivity" />
@@ -30,6 +33,7 @@
             android:authorities="com.example.todos.todosprovider"
             android:exported="false" />
 
+        <activity android:name=".about_me" android:parentActivityName=".TodoListActivity" ></activity>
     </application>
 
 </manifest>
